2008-06-23  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: Added tab to
	  reindent option.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Moved logic for
	  getting the system font from Font to FontName. In this way it is
	  possible to make copies of options objects and get the name copied.

2008-06-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: Track api changes.
	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Moved initial
	  options loading to TextEditor.
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Remove debug code.

2008-06-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: fixed font name
	  resolving.

2008-06-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed 'Bug 393408 -
	  Exception in ParseInformationUpdaterWorkerThread'.

2008-06-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: fixed 'Bug 382403 - Find
	  moves current position in all files'.

2008-06-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Another
	  workaround for gtk# bug #398929.

2008-06-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SearchWidget.cs: Workaround for gtk# bug
	  #398929.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/gui.stetic, MonoDevelop.SourceEditor.addin.xml: Bump MD
	  version.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 
