@@ -1,5 +1,10 @@
 2008-06-23  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed 'Bug 402368 -
+	  SourceEditorWidget+Error.RemoveFromLine throws uncaught exception'
+
+2008-06-23  Mike Krüger <mkrueger@novell.com> 
+
 	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
 	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs,
 	  MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs,
